Fixed up the cilksan detail panel so that its a bit more consistent with widths. Fixed the CSS so that the colors are now mostly based off the Styleguide, and the UI is usable in the 4 default color schemes. Some color schemes have little contrast though, such as the two Light themes.

--- a/styles/cilkide-global.less
+++ b/styles/cilkide-global.less
@@ -43,7 +43,7 @@ ul.background-message.cilkpride-background-message {
   }
 
   .cilkide-tab {
-    color: #ffffff;
+    color: @text-color-subtle;
     float: left;
     position: relative;
     padding: 3px 15px;
@@ -55,12 +55,13 @@ ul.background-message.cilkpride-background-message {
     cursor: pointer;
 
     &.selected {
-      background: @background-color-selected;
+      background-color: @background-color-selected;
+      color: @text-color-selected;
       cursor: default;
     }
 
     &:hover {
-      background: @background-color-selected;
+      background-color: @background-color-selected;
     }
 
     span.icon-check:before {
@@ -223,7 +224,7 @@ atom-text-editor::shadow .password-lines .line {
 }
 
 .username-span {
-  font-family: Consolas;
+  font-family: Consolas, Monaco, monospace;
   color: @text-color-highlight;
 }
 
